[project]
name = "uv-monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=11.1.0",
]

[dependency-groups]
dev = [
    # formatter
    "black==25.1.0",
    "docformatter==1.7.5",
    "isort==6.0.1",
]


# formatting config
[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.docformatter]
blank = true
recursive = true

[tool.uv.workspace]
members = ["api/vision"]
