[project]
name = "vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "numpy==1.26.4",
    "opencv-python-headless==4.10.0.84",
    "uvicorn==0.34.0",
]

[dependency-groups]
dev = [
    # formatter
    "black==25.1.0",
    "docformatter==1.7.5",
    "isort==6.0.1",
]


# formatting config
[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.docformatter]
blank = true
recursive = true
